// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="display-flex-column display-flex-center huge-spacer-top"
>
  <img
    alt="hotspots.page"
    className="huge-spacer-top"
    height={100}
    src="/images/hotspot-large.svg"
  />
  <h1
    className="huge-spacer-top"
  >
    hotspots.no_hotspots.title
  </h1>
  <div
    className="abs-width-400 text-center big-spacer-top"
  >
    hotspots.no_hotspots.description
  </div>
  <withAppStateContext(DocLink)
    className="big-spacer-top"
    to="/user-guide/security-hotspots/"
  >
    hotspots.learn_more
  </withAppStateContext(DocLink)>
</div>
`;

exports[`should render correctly: file 1`] = `
<div
  className="display-flex-column display-flex-center huge-spacer-top"
>
  <img
    alt="hotspots.page"
    className="huge-spacer-top"
    height={100}
    src="/images/hotspot-large.svg"
  />
  <h1
    className="huge-spacer-top"
  >
    hotspots.no_hotspots_for_file.title
  </h1>
  <div
    className="abs-width-400 text-center big-spacer-top"
  >
    hotspots.no_hotspots_for_file.description
  </div>
  <withAppStateContext(DocLink)
    className="big-spacer-top"
    to="/user-guide/security-hotspots/"
  >
    hotspots.learn_more
  </withAppStateContext(DocLink)>
</div>
`;

exports[`should render correctly: filtered 1`] = `
<div
  className="display-flex-column display-flex-center huge-spacer-top"
>
  <img
    alt="hotspots.page"
    className="huge-spacer-top"
    height={100}
    src="/images/filter-large.svg"
  />
  <h1
    className="huge-spacer-top"
  >
    hotspots.no_hotspots_for_filters.title
  </h1>
  <div
    className="abs-width-400 text-center big-spacer-top"
  >
    hotspots.no_hotspots_for_filters.description
  </div>
</div>
`;

exports[`should render correctly: keys 1`] = `
<div
  className="display-flex-column display-flex-center huge-spacer-top"
>
  <img
    alt="hotspots.page"
    className="huge-spacer-top"
    height={100}
    src="/images/hotspot-large.svg"
  />
  <h1
    className="huge-spacer-top"
  >
    hotspots.no_hotspots_for_keys.title
  </h1>
  <div
    className="abs-width-400 text-center big-spacer-top"
  >
    hotspots.no_hotspots_for_keys.description
  </div>
</div>
`;
